--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,8 @@
 name: 'Deploy to AWS CloudFormation'
 
 on: 
-  # push:
-  #   branches: [ master ]
+  push:
+    branches: [ main ]
   # pull_request:
   #   branches: [ master ]
 
