--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,11 @@ name: 'Deploy to AWS CloudFormation'
 on: 
   push:
     branches: [ main ]
+    inputs:
+      region:
+        description: 'AWS Region to deploy to'
+        required: true
+        default: 'us-east-2'
   # pull_request:
   #   branches: [ master ]
 
