--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
     inputs:
-      region:
+      region:s
         description: 'AWS Region to deploy to'
         required: true
         default: 'us-east-2'
@@ -46,4 +46,4 @@ jobs:
           name: avneet-test-stack
           template: test-stack.yaml
           no-fail-on-empty-changeset: "1"
-          parameter-overrides: "EC2InstanceType=t2.micro"
+          
