--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
     inputs:
-      region:s
+      region:
         description: 'AWS Region to deploy to'
         required: true
         default: 'us-east-2'
