fix bucket name and automated deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,21 +3,17 @@ name: 'Deploy to AWS CloudFormation'
 on: 
   push:
     branches: [ main ]
-    inputs:
-      region:
-        description: 'AWS Region to deploy to'
-        required: true
-        default: 'us-east-2'
+    
   # pull_request:
   #   branches: [ master ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-    inputs:
-      region:
-        description: 'AWS Region to deploy to'
-        required: true
-        default: 'us-east-2'
+    # inputs:
+    #   region:
+    #     description: 'AWS Region to deploy to'
+    #     required: true
+    #     default: 'us-east-2'
 
 
 jobs:
@@ -37,7 +33,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.ACCESS_KEY_SECRET }}
-          aws-region: ${{ github.event.inputs.region }}
+          aws-region: us-east-2
 
       # Deploy to AWS CloudFormation
       - name: Deploy to AWS CloudFormation
