--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,8 @@
 name: 'Deploy to AWS CloudFormation'
 
 on: 
-  push:
-    branches: [ main ]
+  # push:
+  #   branches: [ main ]
     
   # pull_request:
   #   branches: [ master ]
@@ -34,7 +34,7 @@ jobs:
           aws-access-key-id: ${{ secrets.ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.ACCESS_KEY_SECRET }}
           aws-region: us-east-2
-
+          
       # Deploy to AWS CloudFormation
       - name: Deploy to AWS CloudFormation
         uses: aws-actions/aws-cloudformation-github-deploy@v1
@@ -42,4 +42,4 @@ jobs:
           name: avneet-test-stack
           template: test-stack.yaml
           no-fail-on-empty-changeset: "1"
-          
+          parameter-overrides: User=$GITHUB_ACTOR
