--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,4 +42,4 @@ jobs:
           name: avneet-test-stack
           template: test-stack.yaml
           no-fail-on-empty-changeset: "1"
-          parameter-overrides: User=$GITHUB_ACTOR
+          parameter-overrides: "User=avneetgill"
