--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,7 @@ jobs:
           aws-access-key-id: ${{ secrets.ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.ACCESS_KEY_SECRET }}
           aws-region: us-east-2
+          user: $GITHUB_ACTOR
           
       # Deploy to AWS CloudFormation
       - name: Deploy to AWS CloudFormation
@@ -42,4 +43,4 @@ jobs:
           name: avneet-test-stack
           template: test-stack.yaml
           no-fail-on-empty-changeset: "1"
-          parameter-overrides: "User=$GITHUB_ACTOR"
+          parameter-overrides: "User=avneet"
