--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,9 @@ jobs:
         id: step_one
         run: |
             echo "User=$(git config user.name)" >> $GITHUB_ENV
-            echo $${{ env.User }}
+            echo ${{ env.User }}
+            echo $(git config user.name)
+
       # Deploy to AWS CloudFormation
       - name: Deploy to AWS CloudFormation
         uses: aws-actions/aws-cloudformation-github-deploy@v1
