--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Get User
         id: step_one
         run: |
-            echo "User=$(git config user.name)" >> $GITHUB_ENV
+            echo "User=$GITHUB_ACTOR" >> $GITHUB_ENV
             echo ${{ env.User }}
             echo $(git config user.name)
 
