attempt at adding conditional param using branches

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,10 +41,12 @@ jobs:
         run: |
             echo "User=$GITHUB_ACTOR" >> $GITHUB_ENV
       
-      - name: Check Environment
+      - name: Check Environment Dev
         if: endsWith(github.ref, '/master')
         run: |
           echo "User=Dev" >> $GITHUB_ENV
+      
+      - name: Check Environment Prod
         if: endsWith(github.ref, '/prod')
         run: |
           echo "User=Prod" >> $GITHUB_ENV
