--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Deploy to AWS CloudFormation
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
-          name: avneet-test-stack
+          name: test-stack-${{ env.User }}
           template: test-stack.yaml
           no-fail-on-empty-changeset: "1"
           parameter-overrides: "User=${{ env.User }}"
